Simple header, main, footer

--- a/html_advanced/3-index.html
+++ b/html_advanced/3-index.html
@@ -9,11 +9,8 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
-        <header>
-        </header>
-        <main></main>
+        <header>header</header>
+        <main>Main content</main>
+        <footer>footer</footer>
     </body>
-    <footer>
-        footer
-    </footer>
 </html>
