--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -14,20 +14,20 @@
             <section>Hero section</section>
             <section>Services section</section>
             <section>Works section
-                <article>Work #</article>
-                <article>Work ##</article>
-                <article>Work ###</article>
+                <article><h1>Work #</h1></article>
+                <article><h2>Work #</h2></article>
+                <article><h3>Work #</h3>></article>
             </section>
             <section>About section</section>
             <section>Latest news section
-                <article>Article #</article>
-                <article>Article ##</article>
-                <article>Article ###</article>
+                <article><h1>Article #</h1></article>
+                <article><h2>Article #</h2></article>
+                <article><h3>Article #</h3></article>
             </section>
             <section>Testimonials section
-                <article>Testimonial #</article>
-                <article>Testimonial ##</article>
-                <article>Testimonial ###</article>
+                <article><h1>Testimonial #</h1></article>
+                <article><h2>Testimonial #</h2></article>
+                <article><h3>Testimonial #</h3>></article>
             </section>
             <section>Contact section</section>
         </main>
