--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -14,20 +14,20 @@
             <section>Hero section</section>
             <section>Services section</section>
             <section>Works section
-                <article><h1>Work #</h1></article>
-                <article><h2>Work #</h2></article>
-                <article><h3>Work #</h3>></article>
+                <article>Work 1</article>
+                <article>Work 2</article>
+                <article>Work 3</article>
             </section>
             <section>About section</section>
             <section>Latest news section
-                <article><h1>Article #</h1></article>
-                <article><h2>Article #</h2></article>
-                <article><h3>Article #</h3></article>
+                <article>Article 1</article>
+                <article>Article 2</article>
+                <article>Article 3</article>
             </section>
             <section>Testimonials section
-                <article><h1>Testimonial #</h1></article>
-                <article><h2>Testimonial #</h2></article>
-                <article><h3>Testimonial #</h3>></article>
+                <article>Testimonial 1</article>
+                <article>Testimonial 2</article>
+                <article>Testimonial 3</article>
             </section>
             <section>Contact section</section>
         </main>
