--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -19,8 +19,8 @@
             <div>
             <section><h2>We help you build your brand!</h2></section>
             </div>
-            <div>
             <section>
+                <div>
                 <h2>Services</h2>
                 <p>We work with you</p>
             <h3>Design & Concept</h3>
@@ -31,8 +31,8 @@
             <h3>Social Media</h3>        
             </section>
             </div>
-            <div>
             <section>
+                <div>
                 <div>
                 <h2>Works</h2>
                 <p>Take a look in our portfolio</p>
@@ -42,8 +42,8 @@
             </section>
             </div>
 
-            <div>
             <section>
+                <div>
                 <h2>About Us</h2>
                 <p>Everything about us</p>
                 <h3>Who are we</h3>
@@ -55,8 +55,8 @@
             </section>
             </div>
             
-            <div>
-            <section><h2>Latest news</h2>
+            <section><div>
+                <h2>Latest news</h2>
                 <article><p>Career</p>
                     <h3>Hoc loco tenere se Triarius non potuit.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
@@ -72,8 +72,8 @@
             </section>
             </div>
 
-            <div>
-            <section><h2>Testimonials</h2>
+            <section><div>
+                <h2>Testimonials</h2>
                 <p>We are more than a digital company</p>
                 <article>Testimonial 1</article>
                 <article>Testimonial 2</article>
@@ -81,8 +81,8 @@
             </section>
             </div>
 
-            <div>
-            <section><h2>Contact</h2>
+            <section><div>
+                <h2>Contact</h2>
                 <p>We like to know new people</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
             </section>
