--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -54,7 +54,8 @@
             </section>
             </div>
             
-            <section><div>
+            <section>
+                <div>
                 <h2>Latest news</h2>
                 <article><p>Career</p>
                     <h3>Hoc loco tenere se Triarius non potuit.</h3>
@@ -71,7 +72,8 @@
             </section>
             </div>
 
-            <section><div>
+            <section>
+                <div>
                 <h2>Testimonials</h2>
                 <p>We are more than a digital company</p>
                 <article>Testimonial 1</article>
