--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -21,12 +21,16 @@
             </div>
             <section>
                 <div>
+
+                <div>
                 <header>
                     <div>
                 <h2>Services</h2>
                 <p>We work with you</p>
+                </div>
             </header>
         </div>
+
             <h3>Design & Concept</h3>
             <h3>Digital Strategy</h3>
             <h3>Content Strategy</h3>
