--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -21,9 +21,11 @@
             </div>
             <section>
                 <div>
-                    <div class="header">   
+                    <div class="Services">
+                        <header> 
                 <h2>Services</h2>
                 <p>We work with you</p>
+            </header> 
                 </div>
             <h3>Design & Concept</h3>
             <h3>Digital Strategy</h3>
