--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -37,30 +37,41 @@
             </div>
             <section>
                 <div>
+                    <div>
+                    <header>
                 <h2>Works</h2>
                 <p>Take a look in our portfolio</p>
+            </header>
                 <article><h3>Interior Design</h3></article>
                 <article><h3>Web Development</h3></article>
                 <article><h3>Personal Brand</h3></article>
+        </div>
             </section>
             </div>
 
             <section>
                 <div>
+                    <div>
+                    <header>
                 <h2>About Us</h2>
                 <p>Everything about us</p>
+            </header>
                 <h3>Who are we</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 <h3>Our culture</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 <h3>How we work</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+            </div>
             </section>
             </div>
 
             <section>
                 <div>
+                    <div>
+                    <header>
                 <h2>Latest news</h2>
+            </header>
                 <article><p>Career</p>
                     <h3>Hoc loco tenere se Triarius non potuit.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
@@ -73,23 +84,33 @@
                     <h3>Bestiarum vero nullum iudicium puto.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                 </article>
+            </div>
             </section>
             </div>
 
             <section>
                 <div>
+                    <div>
+                    <header>
                 <h2>Testimonials</h2>
                 <p>We are more than a digital company</p>
+            </header>
                 <article>Testimonial 1</article>
                 <article>Testimonial 2</article>
                 <article>Testimonial 3</article>
+            </div>
             </section>
             </div>
 
-            <section><div>
+            <section>
+                <div>
+                    <div>
+                <header>
                 <h2>Contact</h2>
                 <p>We like to know new people</p>
+            </header>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+            </div>
             </section>
         </div>
         </main>
@@ -97,3 +118,4 @@
             <div>footer</div></footer>
     </body>
 </html>
+</div></div>
