add a line break and a comment

--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -16,12 +16,16 @@
             <span>Techium</span>
             <nav></nav></header>
         </div>
+        <br>
+        <!--Main-->
         <main>
             <h1>Homepage</h1>
             <div>
             <section><h2>We help you build your brand!</h2></section>
             </div>
             <section>
+                <br>
+                <!--Services section-->
                 <div>
                     <header>
                 <h2>Services</h2>
@@ -38,6 +42,8 @@
             </section>
             </div>
             <section>
+                <br>
+                <!--Works section-->
                 <div>
                     <header>
                 <h2>Works</h2>
@@ -52,6 +58,8 @@
             </div>
 
             <section>
+                <br>
+                <!--About Us section-->
                 <div>
                     <header>
                 <h2>About Us</h2>
@@ -69,6 +77,8 @@
             </div>
 
             <section>
+                <br>
+                <!--Latest news section-->
                 <div>
                     <header>
                 <h2>Latest news</h2>
@@ -94,6 +104,8 @@
             </section>
 
             <section>
+                <br>
+                <!--Testimonials section-->
                 <div>
                     <header>
                 <h2>Testimonials</h2>
@@ -108,6 +120,8 @@
             </div>
 
             <section>
+                <br>
+                <!--Contact section-->
                 <div>
                 <header>
                 <h2>Contact</h2>
@@ -119,8 +133,11 @@
             </section>
         </div>
         </main>
+        <br>
+        <!--Footer-->
         <footer>
-            <div>footer</div></footer>
+            <div>footer</div>
+        </footer>
     </body>
 </html>
 </div></div>
