--- a/html_advanced/21-index.html
+++ b/html_advanced/21-index.html
@@ -150,7 +150,8 @@
         <br>
         <!-- Footer -->
         <footer>
-            <div><a herf="https://www.facebook.com/HolbertonSchool/">Facebook</a>
+            <div>
+                <a herf="https://www.facebook.com/HolbertonSchool/">Facebook</a>
                 <a herf="https://twitter.com/holbertonschool">Twitter</a>
                 <a herf="https://www.instagram.com/holbertonschool/">Instagram</a>
             </div>
