--- a/html_advanced/21-index.html
+++ b/html_advanced/21-index.html
@@ -151,9 +151,9 @@
         <!-- Footer -->
         <footer>
             <div>
-                <a herf="https://www.facebook.com/HolbertonSchool/"> Facebook </a>
-                <a herf="https://twitter.com/holbertonschool"> Twitter </a>
-                <a herf="https://www.instagram.com/holbertonschool/"> Instagram </a>
+                <h1><a herf="https://www.facebook.com/HolbertonSchool/"> Facebook </a></h1>
+                <h2><a herf="https://twitter.com/holbertonschool"> Twitter </a></h2>
+                <h3><a herf="https://www.instagram.com/holbertonschool/"> Instagram </a></h3>
             </div>
         </footer>
     </body>
