--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -51,7 +51,7 @@
             <h3><a href="#">Web Development></a></h3>
             <h3><a href="#">Social Media></a></h3>
         </div>
-            </section>
+            <!-- </section> -->
             </div>
     
             <br>
@@ -105,12 +105,12 @@
                 </article>
                 <article>
                     <p>Digital Life</p>
-                    <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum></a></h3>
+                    <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
                 </article>
                 <article>
                     <p>Social</p>
-                    <h3><a href="#">Bestiarum vero nullum iudicium puto.></a></h3>
+                    <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                 </article>
             </div>
