--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -129,13 +129,13 @@
                 <p>We are more than a digital company</p>
             </header>
             <div>
-                <article><blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
+                <article><p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
                     <cite>Yuri Y.</cite>
                 </article>
-                <article><blockquote>Thank you so much for your help. Techium company is awesome!</blockquote>
+                <article><p>Thank you so much for your help. Techium company is awesome!</p>
                     <cite>Dorrie S.</cite>
                 </article>
-                <article><blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.</blockquote>
+                <article><p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
                     <cite>Sven H.</cite>
                 </article>
             </div>
