Address and latest news authors

--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -174,9 +174,8 @@
         <!-- Footer -->
         <footer>
             <address>
-                <a href="234 Washington Street">Urbana, Illinois</a>
+                <a href="234 Washington Street"><br>Urbana, Illinois</a>
             </address>
-            <br>
             <div>
                 <ul>
                 <li><a href='https://www.facebook.com/HolbertonSchool/'>Facebook</a></li>
