Address and latest news authors

--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -174,7 +174,7 @@
         <!-- Footer -->
         <footer>
             <address>
-                <a href="234 Washington Street"><br>Urbana, Illinois</a>
+                <a href="234 Washington Street"><br><p>Urbana, Illinois</p></a>
             </address>
             <div>
                 <ul>
