--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -81,7 +81,8 @@
         <section>
             <header><h2>Typography</h2></header>
             <div>
-                <p>320 Stewart Avenue, Unit 12<br><address>New York City NY 10001</address></p>
+                <p>320 Stewart Avenue, Unit 12<br>
+                    New York City NY 10001</p>
             </div>
             <div>
                 <pre>
