--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -81,8 +81,7 @@
         <section>
             <header><h2>Typography</h2></header>
             <div>
-                <p>320 Stewart Avenue, Unit 12<br>
-                    New York City NY 10001</p>
+                <address>Stewart Avenue, Unit 12<br>New York City NY 10001</address> 
             </div>
             <div>
                 <pre>
@@ -93,9 +92,7 @@
                 </pre>
             </div>
             <div>
-                <p>
-                    Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies highlighted ut sed metus.
-                </p>
+                <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies highlighted ut sed metus.</p>
             </div>
         </section>
     </main>
