--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -81,7 +81,7 @@
         <section>
             <header><h2>Typography</h2></header>
             <div>
-                <address>Stewart Avenue, Unit 12<br>New York City NY 10001</address> 
+                <address>320 Stewart Avenue, Unit 12<br>New York City NY 10001</address> 
             </div>
             <div>
                 <pre>
