--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -99,9 +99,9 @@
         <section>
             <header><h2>Table</h2></header>
             <tr>
-                <th scope="col">Title</th>
-                <th scope="col">Director</th>
-                <th scope="col"> Release Date</th>
+                <th scope="col">Player</th>
+                <th scope="col">Gloobles</th>
+                <th scope="col">Za'taak</th>
             </tr>
         </section>
     </main>
