--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -98,11 +98,13 @@
         <!-- Table -->
         <section>
             <header><h2>Table</h2></header>
+            <table>
             <tr>
-                <th scope="col">Player</th>
-                <th scope="col">Gloobles</th>
-                <th scope="col">Za'taak</th>
+                <th scope="col">Title</th>
+                <th scope="col">Director</th>
+                <th scope="col"> Release Date</th>
             </tr>
+        </table>
         </section>
     </main>
         <footer></footer>
