--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -105,6 +105,21 @@
                 <th scope="col">Director</th>
                 <th scope="col"> Release Date</th>
             </tr>
+            <tr>
+                <th scope="row">Star Wars: Episode IV - A New Hope</th>
+                <td>George Lucas</td>
+                <td>May 25th, 1977</td>
+            </tr>
+            <tr>
+                <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
+                <td>Irvin Kershner</td>
+                <td>May 21st, 1980</td>
+            </tr>
+            <tr>
+                <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
+                <th>Richard Marquand</th>
+                <th>May 25th, 1983</th>
+            </tr>
         </table>
         </section>
     </main>
