--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -100,11 +100,14 @@
             <header><h2>Table</h2></header>
             <table>
                 <caption>Star Wars Trilogy Data</caption>
+                <thead>
             <tr>
                 <th scope="col">Title</th>
                 <th scope="col">Director</th>
                 <th scope="col"> Release Date</th>
             </tr>
+        </thead>
+        <tbody>
             <tr>
                 <th scope="row">Star Wars: Episode IV - A New Hope</th>
                 <td>George Lucas</td>
@@ -120,6 +123,7 @@
                 <th>Richard Marquand</th>
                 <th>May 25th, 1983</th>
             </tr>
+        </tbody>
         </table>
         </section>
     </main>
