--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -97,7 +97,9 @@
         </section>
         <!-- Table -->
         <section>
-            <header><h2>Table</h2></header>
+            <header>
+                <h2>Table</h2>
+            </header>
             <table>
                 <caption>Star Wars Trilogy Data</caption>
                 <thead>
@@ -120,8 +122,8 @@
             </tr>
             <tr>
                 <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
-                <th>Richard Marquand</th>
-                <th>May 25th, 1983</th>
+                <td>Richard Marquand</td>
+                <td>May 25th, 1983</td>
             </tr>
         </tbody>
         </table>
