--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -134,9 +134,14 @@
             <div>
                 <h3>Default</h3>
                 <details>
-                    <summary>Always open</summary>
+                    <summary>Show/Hide me</summary>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                 </details>
+                <div>
+                    <h3>Open</h3>
+                    <summary>Always open</summary>
+                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                </div>
             </div>
         </section>
     </main>
