--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -136,13 +136,15 @@
                 <details>
                     <summary>Show/Hide me</summary>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                    <div>
-                        <h3>Open</h3>
-                        <summary>Always open</summary>
-                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                    </div>
+                </details>
+            </div>
+                <div>
+                    <details>
+                    <h3>Open</h3>
+                    <summary>Always open</summary>
+                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                </details>
                 </div>
-            </details>
         </section>
     </main>
         <footer></footer>
