Add images to your sections

--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -34,9 +34,13 @@
         <!-- Main -->
         <main>
             <h1>Homepage</h1>
+        <hr>
+        <!-- Hero section -->
+        <section>
             <div>
             <section><h2>We help you build your brand!</h2></section>
             </div>
+        </section>
 
             <br>
             <!-- Services section -->
@@ -66,11 +70,11 @@
                 <p>Take a look in our portfolio</p>
             </header>
             <div>
-                <div><img src="images/pic-work-01.jpg" srcset=""> </div>
+                <div><img src="images/pic-work-01.jpg" alt=""/> </div>
                 <article><h3><a href="#">Interior Design</a></h3></article>
-                <div><img src="images/pic-work-02.jpg" alt=""></div>
+                <div><img src="images/pic-work-02.jpg" alt=""/></div>
                 <article><h3><a href="#">Web Development</a></h3></article>
-                <div><img src="images/pic-work-03.jpg" alt=""></div>
+                <div><img src="images/pic-work-03.jpg" alt=""/></div>
                 <article><h3><a href="#">Personal Brand</a></h3></article>
         </div>
             </section>
