--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -70,12 +70,18 @@
                 <p>Take a look in our portfolio</p>
             </header>
             <div>
+                <article>
                 <div><img src="images/pic-work-01.jpg" alt=""/> </div>
-                <article><h3><a href="#">Interior Design</a></h3></article>
+                <h3><a href="#">Interior Design</a></h3>
+            </article>
+            <article>
                 <div><img src="images/pic-work-02.jpg" alt=""/></div>
-                <article><h3><a href="#">Web Development</a></h3></article>
+                <h3><a href="#">Web Development</a></h3>
+            </article>
+            <article>
                 <div><img src="images/pic-work-03.jpg" alt=""/></div>
-                <article><h3><a href="#">Personal Brand</a></h3></article>
+                <h3><a href="#">Personal Brand</a></h3>
+            </article>
         </div>
             </section>
             </div>
