--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -61,7 +61,7 @@
                         </div>
                     </section>
                     <!– Services section –>
-                        <section id="services" class="section">
+                        <section id="services" class="section section-services">
                             <div class="container">
                                 <header class="section-header">
                                     <h2 class="section-title">Services</h2>
@@ -106,7 +106,7 @@
                             </div>
                         </section>
                         <!– Works section –>
-                            <section id="works" class="section" data-section-theme="dark">
+                            <section id="works" class="section" data-section-theme="dark section-works">
                                 <div class="container">
                                     <header class="section-header">
                                         <h2 class="section-title">Works</h2>
