--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -50,7 +50,7 @@
         <!– Main –>
             <main>
                 <!– Hero section –>
-                    <section class="section-hero" data-section-theme="dark">
+                    <section class="section-hero" data-section-theme="dark section-works">
                         <div class="container">
                             <div class="section-body">
                                 <section class="section-inner">
@@ -156,7 +156,7 @@
                                 </div>
                             </section>
                             <!– About Us section –>
-                                <section id="about" class="section">
+                                <section id="about" class="section section-about-us">
                                     <div class="container">
                                         <header class="section-header">
                                             <h2 class="section-title">About Us</h2>
@@ -192,7 +192,7 @@
                                     </div>
                                 </section>
                                 <!– Latest news section –>
-                                    <section id="latest_news" class="section">
+                                    <section id="latest_news" class="section latest_news">
                                         <div class="container">
                                             <header class="section-header">
                                                 <h2 class="section-title">Latest News</h2>
@@ -253,7 +253,7 @@
                                         </div>
                                     </section>
                                     <!– Testimonials section –>
-                                        <section id="testimonial" class="section">
+                                        <section id="testimonial" class="section testimonial">
                                             <div class="container">
                                                 <header class="section-header">
                                                     <h2 class="section-title">Testimonials</h2>
@@ -303,7 +303,7 @@
                                             </div>
                                         </section>
                                         <!– Contact section –>
-                                            <section id="contact" class="section">
+                                            <section id="contact" class="section section-contact">
                                                 <div class="container">
                                                     <header class="section-header">
                                                         <h2 class="section-title">Contact</h2>
