--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -50,7 +50,7 @@
         <!– Main –>
             <main>
                 <!– Hero section –>
-                    <section class="section-hero" data-section-theme="dark section-works">
+                    <section class="section-hero section-works" data-section-theme="dark">
                         <div class="container">
                             <div class="section-body">
                                 <section class="section-inner">
@@ -192,7 +192,7 @@
                                     </div>
                                 </section>
                                 <!– Latest news section –>
-                                    <section id="latest_news" class="section latest_news">
+                                    <section id="latest_news" class="section section-latest-news">
                                         <div class="container">
                                             <header class="section-header">
                                                 <h2 class="section-title">Latest News</h2>
@@ -253,7 +253,7 @@
                                         </div>
                                     </section>
                                     <!– Testimonials section –>
-                                        <section id="testimonial" class="section testimonial">
+                                        <section id="testimonial" class="section section-testimonial">
                                             <div class="container">
                                                 <header class="section-header">
                                                     <h2 class="section-title">Testimonials</h2>
