Form elements must have labels

--- a/accessibility/fix-a11y/05-index.html
+++ b/accessibility/fix-a11y/05-index.html
@@ -154,7 +154,7 @@
               <form action="#" method="post">
                 <div class="input-group">
                     <label class="visually-hidden" for="email"></label>
-                  <input class="form-control" type="email" name="email" id="email" autocomplete="email" aria-required="true">
+                  <input class="form-control" type="email" name="email" id="email" autocomplete="email" aria-required="true" required>
                   <div class="input-group-btn"> <button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
