--- a/accessibility/fix-a11y/07-index.html
+++ b/accessibility/fix-a11y/07-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Homepage - A fake website</title>
   </head>
