--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <section>
     <div class="container">
       <div class="row">
@@ -86,7 +86,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <div class="section">
     <div class="container">
       <div class="row">
@@ -126,7 +126,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <section>
     <div class="container">
       <div class="row">
@@ -155,7 +155,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 </main>
   <footer>
     <div class="container">
