--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <div>
       <div>
         <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
-        <nav>
+        <div class="nav">
           <div>
             <p><a href="#">Home</a></p>
             <p><a href="#">About</a></p>
@@ -28,7 +28,7 @@
   </header>
   <main>
   <h1>Homepage</h1>
-  <section>
+  <section class="section">
     <div class="container">
       <div class="row">
         <div class="col-6">
@@ -40,8 +40,8 @@
         <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
       </div>
     </div>
-  </div>
-  <section>
+  </section>
+  <section class="section">
     <div class="container">
       <div class="row">
         <div class="col-6"><img class="img-fluid" src="about-img.png" alt="About image"></div>
@@ -56,7 +56,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="section">
     <div class="container">
       <div class="row">
         <div class="col-7">
@@ -100,8 +100,8 @@
         </div>
       </div>
     </div>
-  </div>
-  <section>
+</section>
+  <section class="section">
     <div class="container">
       <div class="row">
         <div class="menu-content">
@@ -127,7 +127,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="section">
     <div class="container">
       <div class="row">
         <div class="col-8">
@@ -157,7 +157,7 @@
     </div>
   </section>
 </main>
-  <footer>
+  <div class="footer">
     <div class="container">
       <div class="row">
         <div class="col-5">
