--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -12,7 +12,7 @@
     <div>
       <div>
         <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
-        <div class="nav">
+        <nav class="nav">
           <div>
             <p><a href="#">Home</a></p>
             <p><a href="#">About</a></p>
@@ -22,7 +22,7 @@
             <p><a href="#">Pages</a></p>
             <p><a href="#">Contact</a></p>
           </div>
-        </div>
+        </nav>
       </div>
     </div>
   </header>
@@ -157,7 +157,7 @@
     </div>
   </section>
 </main>
-  <div class="footer">
+  <footer class="footer">
     <div class="container">
       <div class="row">
         <div class="col-5">
@@ -191,7 +191,7 @@
         </div>
       </div>
     </div>
-  </div>
+</footer>
 </body>
 
 </html>
