--- a/JQuery_advanced/1-index.html
+++ b/JQuery_advanced/1-index.html
@@ -5,7 +5,8 @@
 
     <meta charset="utf-8" />
     <title>Task 1</title>
-    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
 
 </head>
 
