--- a/Cookies_local_storage/3-index.html
+++ b/Cookies_local_storage/3-index.html
@@ -49,6 +49,9 @@
         }
 
         function showForm() {
+            const $welcome = document.getElementById("welcome");
+            if ($welcome) $welcome.remove();
+
             const $loginForm = document.getElementById("loginForm");
             $loginForm.style.display = "block";
         }
@@ -59,12 +62,12 @@
         }
 
         function deleteCookiesAndShowForm() {
+            showForm();
             const date = new Date();
             date.setDate(date.getDate() - 10);
             const expires = "expires=" + date.toUTCString();
             document.cookie = `firstname=; ${expires}; path=/`;
             document.cookie = `email=; ${expires}; path=/`;
-            showForm();
         }
 
         function showWelcomeMessageOrForm() {
@@ -72,10 +75,14 @@
             const firstnameValue = getCookie("firstname");
 
             if (emailValue && firstnameValue) {
-                const $p = document.createElement("p");
-                $p.innerHTML = `Welcome: ${firstnameValue} <a href="#" onclick="deleteCookiesAndShowForm()"> (logout)</a>`;
-                document.body.innerHTML = "";
-                document.body.appendChild($p);
+                hideForm();
+                const $body = document.querySelector("body");
+                const $div = document.createElement("div");
+                $div.setAttribute("id", "welcome");
+                const $h1 = document.createElement("h1");
+                $h1.innerHTML = `Welcome ${firstnameValue} <a href="#" onclick="deleteCookiesAndShowForm()"> (logout)</a>`;
+                $div.append($h1);
+                $body.append($div);
             } else {
                 showForm();
             }
